--- a/src/html/pages/examples/lockscreen.astro
+++ b/src/html/pages/examples/lockscreen.astro
@@ -9,7 +9,7 @@ const year = new Date().getFullYear();
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!--begin::Head-->
   <head>
     <Head title={title} path={path} />
