--- a/src/html/pages/layout/logo-switch.astro
+++ b/src/html/pages/layout/logo-switch.astro
@@ -11,7 +11,7 @@ const htmlPath = convertPathToHtml(path);
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!--begin::Head-->
   <head>
     <Head title={title} path={path} />
