--- a/src/html/pages/UI/general.astro
+++ b/src/html/pages/UI/general.astro
@@ -13,7 +13,7 @@ const pageTitle = "General UI Elements";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <!--begin::Head-->
   <head>
     <Head title={title} path={path} />
