--- a/src/html/pages/docs/license.astro
+++ b/src/html/pages/docs/license.astro
@@ -13,7 +13,7 @@ const page = "license";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!--begin::Head-->
   <head>
     <Head title={title} path={path} />
