--- a/src/html/pages/examples/register.astro
+++ b/src/html/pages/examples/register.astro
@@ -8,7 +8,7 @@ const htmlPath = "..";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!--begin::Head-->
   <head>
     <Head title={title} path={path} />
