--- a/src/html/pages/layout/fixed-complete.astro
+++ b/src/html/pages/layout/fixed-complete.astro
@@ -12,7 +12,7 @@ const page = "fixed-complete";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <!--begin::Head-->
 <head>
   <Head title={title} path={path}/>
